Fix scrollbar edge

--- a/styles/gist.css
+++ b/styles/gist.css
@@ -809,7 +809,6 @@
 }
 
 .gist {
-   max-width:350px;
    overflow:auto;
 }
 
