--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,9 @@
     background-color: grey;
     border-radius: 10px;
 }
+::-webkit-scrollbar-corner {
+    background-color: var(--bg-color);
+}
 
 
 html {
